--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/drawer": "^5.12.7",
     "@react-navigation/native": "^5.1.0",
     "@react-navigation/stack": "^5.14.7",
+    "@reduxjs/toolkit": "^2.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.68.2",
@@ -32,7 +33,7 @@
     "react-native-webview": "^11.26.1",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-saga": "^1.3.0"
   },
   "jest": {
     "preset": "react-native"
